# pitch-prospector

./: .gitignore  README.md  migration_plan.md  pyproject.toml
.github/workflows/: update-data.yml
pitch_prospector/: app.py  db.py
pitch_prospector/data/statcast_monthly/: 2015-10.parquet  2015-11.parquet  2016-10.parquet  2016-11.parquet  2017-10.parquet  2017-11.parquet  2018-03.parquet  2018-10.parquet  2019-03.parquet  2019-10.parquet  2020-07.parquet  2020-10.parquet  2021-03.parquet  2021-10.parquet  2021-11.parquet  2022-03.parquet  2022-10.parquet  2022-11.parquet  2023-10.parquet  2023-11.parquet  2024-10.parquet
pitch_prospector/indexing/: append_index.py  auto_refresh_pitch_index.py  backfill_statcast_monthly.py  build_index.py  cloud_refresh.py  pitch_index.py
scripts/: init_db.py  migrate_parquet_to_sqlite.py
