[project]
name = "pitch-prospector"
version = "0.1.0"
description = ""
authors = [
    {name = "sean",email = "seanhannon00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "pybaseball (>=2.2.7,<3.0.0)",
    "streamlit (>=1.47.0,<2.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
